--- a/static/css-modify/index.styl
+++ b/static/css-modify/index.styl
@@ -3,3 +3,85 @@ body {
     font-size: 14px;
   }
 }
+* {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+  -webkit-touch-callout:none;
+}
+background-img(image) {
+  position:relative;
+  height:100%;
+  width:100%;
+  background-image:url('/static/img/'+image);
+  background-repeat:no-repeat;
+  background-position:top center;
+  background-size:100% 100%;
+  z-index:1;
+}
+image-wauto(image) {
+  background-image:url('/static/img/'+image);
+  background-repeat:no-repeat;
+  background-position:top center;
+  background-size:100% auto;
+}
+image-hauto(image) {
+  background-image:url('/static/img/'+image);
+  background-repeat:no-repeat;
+  background-position:top center;
+  background-size:auto 100%;
+}
+image-fit(image) {
+  background-image:url('/static/img/'+image);
+  background-repeat:no-repeat;
+  background-position:top center;
+  background-size:100% 100%;
+}
+body {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  color: #333;
+  font-family: '微软雅黑';
+  background-color: #fff;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  box-shadow: 0 0 160px 0 #5C99E7;
+  -webkit-user-select: none;
+  background-size: cover;
+  box-sizing: border-box;
+  -webkit-transition: all .5s;
+  overflow: hidden;
+  .swiper-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  .swiper-slide {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    &.page1 {
+      .background {
+        background-img('page1-bg.png');
+      }
+      .text1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0.3rem;
+        image-wauto('page1-text1.png');
+        z-index: 2;
+      }
+    }
+  }
+}
