--- a/static/css-modify/index.styl
+++ b/static/css-modify/index.styl
@@ -124,7 +124,7 @@ body {
           height: 0.15rem;
           border-radius: 100%;
           background-color: #cd1733;
-          animation: logo 1s ease-in-out infinite;
+          //animation: logo 1s ease-in-out infinite;
         }
         .logo {
           position: relative;
