--- a/static/css-modify/index.styl
+++ b/static/css-modify/index.styl
@@ -192,7 +192,7 @@ body {
     &.show {
       visibility: visible;
       opacity: 1;
-      transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
+      transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
     }
     .page3-interactive1 {
       position: absolute;
@@ -449,7 +449,7 @@ body {
     &.show {
       visibility: visible;
       opacity: 1;
-      transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
+      transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
     }
     .background {
     }
@@ -573,7 +573,7 @@ body {
     &.show {
       visibility: visible;
       opacity: 1;
-      transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
+      transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
     }
     .page3-interactive1 {
       position: absolute;
@@ -711,7 +711,7 @@ body {
     &.show {
       visibility: visible;
       opacity: 1;
-      transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
+      transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
     }
   }
   .text-details {
@@ -898,7 +898,41 @@ body {
     }
   }
   .collector {
-
+    
+    .thanks {
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 300ms ease-in-out, opacity 300ms ease-in-out;
+      text-align: center;
+      position: absolute;
+      top: 0.7rem;
+      width: 100%;
+      z-index: 10;
+      &.show {
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
+      }
+      .thanks-message {
+        text-align: center;
+        color: #777;
+        line-height: 2;
+      }
+      .thanks-button-area {
+        margin-top: 0.3rem;
+        .focus-button {
+          background-color: #cd1733;
+          color: #fff;
+          padding: 0.04rem 0.08rem;
+          text-align: center;
+          border: none;
+          border-radius: 0.08rem;
+          &:active {
+            background-color: #cd1733 * 0.85;
+          }
+        }
+      }
+    }
     .background {
       background-img('page1-bg.png');
     }
@@ -913,6 +947,7 @@ body {
       image-fit('logo.png');
     }
     .input-area {
+      
       position: absolute;
       width: 100%;
       top: 0.4rem;
@@ -955,6 +990,24 @@ body {
             }
           }
         }
+      }
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 300ms ease-in-out, opacity 300ms ease-in-out;
+      &.show {
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
+      }
+    }
+    .submit-button-area {
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 300ms ease-in-out, opacity 300ms ease-in-out;
+      &.show {
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
       }
     }
     .button-area {
