--- a/static/css-modify/index.styl
+++ b/static/css-modify/index.styl
@@ -1000,6 +1000,13 @@ body {
         transition: opacity 300ms ease-in-out, display 300ms ease-in-out;
       }
     }
+    #error-message {
+      position: absolute;
+      top: 1.5rem;
+      width: 100%;
+      text-align: center;
+      z-index: 10;
+    }
     .submit-button-area {
       visibility: hidden;
       opacity: 0;
