--- a/static/css-modify/index.styl
+++ b/static/css-modify/index.styl
@@ -1,19 +1,20 @@
 @import '../../node_modules/normalize.css/normalize.css'
 @import '../../node_modules/iosselect/src/iosSelect.css'
 
-body {
-  font-size: 16px;
-}
+
 * {
   -webkit-user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  user-select: none;
   -webkit-touch-callout:none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   &:active {
     outline: none;
   }
+}
+input {
+  -webkit-user-select: initial;
+}
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
 background-img(image) {
   position:relative;
@@ -730,6 +731,7 @@ body {
     z-index: 10;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     &.hide {
       visibility: hidden;
       opacity: 0;
@@ -754,7 +756,7 @@ body {
     }
     .page1-logo {
       position: absolute;
-      top: 0.7rem;
+      top: 0.5rem;
       left: 50%;
       width: 0.15rem;
       transform: translateX(-50%);
@@ -783,7 +785,7 @@ body {
     .logo-text-desc {
       position: absolute;
       z-index: 2;
-      top: 0.95rem;
+      top: 0.75rem;
       width: 100%;
       color: #ad5762;
       font-size: 0.1rem;
@@ -792,11 +794,12 @@ body {
     }
     .join-button {
       position: absolute;
-      top: 1.1rem;
+      top: 0.95rem;
       font-weight: 500;
       left: 50%;
       transform: translateX(-50%);
       z-index: 2;
+      white-space: nowrap;
       background-color: #ad5762;
       color: #fff;
       text-align: center;
@@ -807,7 +810,7 @@ body {
     }
     .page1-text-bottom {
       position: absolute;
-      top: 1.25rem;
+      top: 1.15rem;
       width: 100%;
       text-align: center;
       z-index: 2;
@@ -817,7 +820,7 @@ body {
     }
     .page1-button-area {
       position: absolute;
-      top: 1.55rem;
+      top: 1.4rem;
       width: 100%;
       z-index: 2;
       .active-button {
@@ -859,7 +862,6 @@ body {
       text-align: center;
       margin: 0 auto;
       padding: 0.02rem 0.04rem;
-      font-size: 14px;
       white-space: nowrap;
       z-index: 10;
     }
@@ -938,41 +940,46 @@ body {
     }
     .logo {
       z-index: 2;
-      position: absolute;
-      top: 0.08rem;
-      left: 50%;
-      transform: translateX(-50%);
+      position: relative;
+      margin: 0 auto;
+      margin-top: 0.08rem;
       width: 0.15rem;
       height: 0.15rem;
       image-fit('logo.png');
     }
     .input-area {
-      
-      position: absolute;
       width: 100%;
-      top: 0.4rem;
-      left: 0;
+      margin-top: 0.2rem;
       z-index: 10;
       .input-wrapper {
-        margin: 0.04rem 0.15rem;
+        margin: 0.04rem 0.1rem;
         border: 2px solid #ad5762;
-        border-radius: 2px;
+        border-radius: 4px;
         display: flex;
         justify-content: flex-start;
-        align-items: baseline;
+        align-items: center;
         background-color: transparent;
+        position: relative;
         .label-area {
           padding: 0.04rem 0.02rem;
           white-space: nowrap;
         }
+        #sex {
+          width: 100%;
+        }
         .input-area-input {
+          position: relative;
           flex: 1;
-          height: 14px;
+          height: 16px;
           padding: 0 0.02rem;
           border-left: 1px solid #000;
+          display: flex;
+          align-items: center;
           input {
             border: none;
             background-color: transparent;
+            height: 16px;
+            line-height: 16px;
             &:focus {
               outline: none;
             }
@@ -1018,8 +1025,7 @@ body {
       }
     }
     .button-area {
-      position: absolute;
-      top: 1.6rem;
+      margin-top: 0.15rem;
       width: 100%;
       z-index: 10;
       text-align: center;
@@ -1029,7 +1035,6 @@ body {
         color: #fff;
         border-radius: 15px;
         padding: 0.02rem 0.08rem;
-        font-size: 14px;
         box-shadow: 1px 1px 3px inset rgba(255, 255, 255, 0.4);
         &:focus {
           outline: none;
@@ -1038,4 +1043,6 @@ body {
     }
   }
 }
-
+body {
+  font-size: 12px;
+}
